--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 .icon {
-    width: 30px;
+    width: 40px;
+    margin: auto 5px;
     cursor: pointer;
 }
 
@@ -46,6 +47,8 @@ h1, h2, h3, h4, h5, a, p {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
 }
 
 .project-thumbnail {
@@ -79,6 +82,8 @@ h1, h2, h3, h4, h5, a, p {
     opacity: 0;
     transition: opacity 0.3s ease;
     pointer-events: none;
+    display: flex;
+    flex-direction: column;
 }
 
 .visible {
@@ -98,6 +103,7 @@ h1, h2, h3, h4, h5, a, p {
     margin-right: 60px;
     overflow-y: auto;
     max-height: 60vh;
+    height: 100%;
 }
 
 .project-info {
@@ -117,6 +123,27 @@ h1, h2, h3, h4, h5, a, p {
 
 #reticencias {
     height: 25vh;
+}
+
+.loading-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.loading-icon {
+    width: 50px;
+}
+
+#explanation {
+    margin: 20px auto;
+}
+
+.white-background {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
 }
 
 @media (max-width: 768px) {
