--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ h1, h2, h3, h4, h5, a, p {
 .projects-section {
     padding: 15px;
     margin-left: 30px;
-    margin-right: 30px;
     width: 30vw;
+    height: min-content;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -115,12 +115,13 @@ h1, h2, h3, h4, h5, a, p {
 }
 
 .project-item {
+    height: min-content;
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 15px;
-    padding: 5px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    width: 20vw;
+    width: min-content;
     margin: 15px 0;
 }
 
@@ -129,8 +130,9 @@ h1, h2, h3, h4, h5, a, p {
 }
 
 .project-image {
+    margin: 15px auto;
     align-self: center;
-    max-width: 200px;
+    max-width: 90%;
 }
 
 #reticencias {
@@ -194,6 +196,7 @@ h1, h2, h3, h4, h5, a, p {
 .isUp, .isntUp {
     margin: auto 10px;
     align-self: center;
+    flex-shrink: 0;
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -279,6 +282,12 @@ h1, h2, h3, h4, h5, a, p {
     color: black;
 }
 
+.project-technologies {
+    align-self: center;
+    height: min-content;
+    justify-self: center;
+}
+
 @media (max-width: 768px) {
     .content {
         width: 85vw;
@@ -303,10 +312,18 @@ h1, h2, h3, h4, h5, a, p {
         width: 90vw;
     }
 
+    .project-item {
+        width: 90%;
+    }
+
+    .projects-section {
+        margin-right: 0;
+    }
+
     .projects-list {
+        flex-wrap: wrap;
         margin-left: 20px;
         margin-right: 20px;
-        justify-content: space-around;
     }
 
     .project-image, .project-section {
@@ -316,6 +333,7 @@ h1, h2, h3, h4, h5, a, p {
     .project-image {
         margin: 10px auto;
     }
+
 }
 
 @media (max-width: 480px) {
@@ -330,6 +348,18 @@ h1, h2, h3, h4, h5, a, p {
     .intro-section,
     .projects-section {
         width: 100vw;
+    }
+
+    .projects-section {
+        margin-right: 0;
+    }
+
+    .project-image {
+        width: 100%;
+    }
+
+    .project-thumbnail {
+        margin: 0;
     }
 
     .projects-list {
