--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,19 @@ h1, h2, h3, h4, h5, a, p {
     margin-bottom: 20px;
 }
 
+.project-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.project-header-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-self: center;
+    text-align: center;
+}
+
 .projects-section {
     padding: 15px;
     margin-left: 30px;
@@ -73,8 +86,8 @@ h1, h2, h3, h4, h5, a, p {
 
 #show_projects {
     position: fixed;
-    width: 85%;
-    height: 85%;
+    width: 100%;
+    height: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -95,6 +108,8 @@ h1, h2, h3, h4, h5, a, p {
 }
 
 #left-arrow {
+    box-sizing: unset;
+    padding: 15px;
     margin: 15px;
 }
 
@@ -105,7 +120,7 @@ h1, h2, h3, h4, h5, a, p {
     margin-left: 60px;
     margin-right: 60px;
     overflow-y: auto;
-    max-height: 60vh;
+    max-height: 75vh;
     height: 100%;
 }
 
@@ -148,6 +163,7 @@ h1, h2, h3, h4, h5, a, p {
 }
 
 .loading-icon {
+    margin: 15px 0px;
     width: 50px;
 }
 
@@ -160,16 +176,16 @@ h1, h2, h3, h4, h5, a, p {
     border-radius: 50%;
 }
 
-#tecnologies-container {
+#technologies-container {
     margin-top: 20px;
 }
 
-#tecnologies {
+#technologies {
     display: flex;
     flex-wrap: wrap;
 }
 
-.tecnology {
+.technology {
     width: 70px;
     margin: 10px;
     display: flex;
@@ -177,11 +193,11 @@ h1, h2, h3, h4, h5, a, p {
     justify-content: center;
 }
 
-.tecnology-image {
+.technology-image {
     height: 50px;
 }
 
-.tecnology-title {
+.technology-title {
     text-align: center;
 }
 
@@ -216,18 +232,14 @@ h1, h2, h3, h4, h5, a, p {
     text-align: center;
 }
 
-.tecnology-info {
+.technology-info {
     display: flex;
 }
 
-.tecnology-icon {
+.technology-icon {
     width: 20px;
     height: 20px;
     margin-right: 5px;
-}
-
-.inactive {
-    display: none;
 }
 
 .description-text {
@@ -252,6 +264,7 @@ h1, h2, h3, h4, h5, a, p {
 }
 
 .project-link {
+    text-align: center;
     margin-left: 1px;
 }
 
@@ -288,6 +301,21 @@ h1, h2, h3, h4, h5, a, p {
     justify-self: center;
 }
 
+.expandable {
+    min-height: 0;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-rows: 0fr;
+    overflow: hidden;
+    transition: grid-template-rows 300ms;
+}
+
+.wrapper.open {
+    grid-template-rows: 1fr;
+}
+
 @media (max-width: 768px) {
     .content {
         width: 85vw;
@@ -303,7 +331,7 @@ h1, h2, h3, h4, h5, a, p {
         width: 90vw;
     }
 
-    #tecnologies {
+    #technologies {
         overflow-x: auto;
         flex-wrap: nowrap;
     }
@@ -372,11 +400,11 @@ h1, h2, h3, h4, h5, a, p {
         width: 80vw;
     }
 
-    .tecnology {
+    .technology {
         width: 80px;
     }
 
-    .tecnology-image {
+    .technology-image {
         height: 70px;
     }
 }
