--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@ body {
     transition: opacity 0.3s ease-out;
 }
 
-.loading-screen img {
+#loading-image {
     margin: 15px;
+    width: 50px;
+    height: 50px
 }
 
 .icon {
